@@ -1,3 +1,7 @@
+2012-02-04  Valek Filippov
+
+		* CDR: fix from Fridrich.
+
 2012-02-03  Valek Filippov
 
 		* CDR: impove "DISP" handling
